# SynthAgent

./: README.md  acc.py  convert_data.py  convert_tasks.py  multi_exeagent.py  pyproject.toml  refineagent.py  scoreagent.py  synthagent.py
configs/: webarena.jsonl
syn/: __init__.py  args.py  base_explore.py  consts.py  data.py  evaluators.py  gpt.py  prompts.py  tools.py  utils.py
